# wayp_ws

./: .gitignore  frames_2025-04-16_06.41.12.gv  frames_2025-04-16_18.06.26.gv  frames_2025-04-17_01.24.28.gv
src/wayp/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/wayp/launch/: aruco_system.launch.py  simulation.launch.py
src/wayp/wayp/: aruco_detection_analyser.py  aruco_pose_estimator_node.py  aruco_tf_node.py  aruco_tf_node_copy.py  aruco_tf_node_gz.py  drone_control_node.py  drone_localiser_node.py  gazebo_control_node.py  marker_tf_node.py  pose_consistency_analyser.py  tag_map.json
src/wayp/wayp/utils/: detection_rate_plotter.py  pose_plotter.py
