<?xml version="1.0"?>
<package format="3">
  <name>wayp</name>
  <version>0.0.1</version>
  <description>Publishes ArUco TFs and drone localisation using transforms.</description>

  <maintainer email="zac.chew.l@gmail.com">Zachary Chew</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>transforms3d</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv-contrib</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>python3-mavsdk</exec_depend>
  <exec_depend>asyncio</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
